# visual-slam-ros2

./: README.md
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/cv_bridge/share/cv_bridge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/explore_lite/include/explore/: costmap_client.h  costmap_tools.h  explore.h  frontier_search.h
src/install/explore_lite/lib/explore_lite/: explore
src/install/explore_lite/share/explore_lite/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/image_geometry/share/image_geometry/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/multirobot_map_merge/include/map_merge/: map_merge.h  ros1_names.hpp
src/install/multirobot_map_merge/lib/multirobot_map_merge/: map_merge
src/install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/install/my_robot_detection/lib/my_robot_detection/: yolov8_node
src/install/my_robot_detection/share/my_robot_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/my_rtabmap_config/share/my_rtabmap_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/opencv_tests/share/opencv_tests/: package.sh  package.xml
src/log/: latest_build  latest_list
src/my_robot_bringup/: CMakeLists.txt  fix_tf_issues.sh
src/my_robot_bringup/config/: nav2_tf_fix_params.yaml
src/my_robot_bringup/launch/: complete_robot.launch.py  my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml  tf_fix.launch.py
src/my_robot_bringup/rviz/: urdf_config.rviz
src/my_robot_bringup/worlds/: final.sdf  final.world  final_world.sdf  my_world.world  new.sdf  new_world.sdf  world.world
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/config/: camera_config.yaml
src/my_robot_description/launch/: display.launch.py  display.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_detection/: package.xml  setup.cfg  setup.py
src/my_robot_detection/config/: params.yaml  yolov8_config.yaml
src/my_robot_detection/launch/: integrated_navigation_launch.py  yolov8_launch.py
src/my_robot_detection/msg/: Detection.msg  DetectionArray.msg
src/my_robot_detection/my_robot_detection/: integrated_navigation.py  yoloV8.py  yolov8_node.py
src/my_robot_detection/scripts/: download_model.py  setup_yolov8.sh
src/my_robot_localization/: CMakeLists.txt  package.xml
src/my_robot_localization/config/: ekf.yaml
src/my_robot_localization/launch/: ekf.launch.py
src/my_robot_navigation/: CMakeLists.txt  package.xml  save_map.sh
src/my_robot_navigation/config/: ekf_config.yaml  nav2_params.yaml  pose_transformer.yaml
src/my_robot_navigation/launch/: full_navigation.launch.py  navigation_mode.launch.py  slam_mode.launch.py  teleop.launch.py  yolo_detection.launch.py
src/my_robot_navigation/logs/: final_report_20250604_224946.txt
src/my_robot_navigation/maps/: carte2d.pgm  carte2d.yaml  map.pgm  map.yaml  my_carte.pgm  my_carte.yaml
src/my_robot_navigation/rviz/: nav.rviz  navigation.rviz  rtabmap_rviz.rviz  slam_config.rviz
src/my_robot_navigation/scripts/: map_odom_publisher.py  object_logger.py  pose_converter_node.py  save_map.sh
src/my_robot_navigation/src/: pose_transformer.cpp  yolo_detector_node.py
src/my_rtabmap_config/: CMakeLists.txt
src/my_rtabmap_config/config/: rtabmap_params.yaml
src/my_rtabmap_config/launch/: check_orbslam_running.py  rtabmap_stereo.launch.py
(+544 files in other folders)
