<?xml version="1.0"?>
<package format="3">
  <name>my_robot_detection</name>
  <version>0.0.1</version>
  <description>Intégration YOLOv8 pour la détection d'objets</description>
  <maintainer email="msi@example.com">msi</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Python ROS 2 dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Optional: custom message types -->
  <!-- <exec_depend>custom_msgs</exec_depend> -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
